objects/maps__BaseObject__c.object
<CustomObject>
    <fields>
        <fullName>maps__AddressObject__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Address Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__AutoAssignmentDirtyFlag__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Auto Assignment Dirty Flag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__BatchSize__c</fullName>
        <defaultValue>50</defaultValue>
        <label>Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__CleanCity__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Clean City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__CleanCountry__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Clean Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__CleanCounty__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Clean County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__CleanDistrict__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Clean District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__CleanPostalCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Clean Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__CleanState__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Clean State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__CleanStreet__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Clean Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__Country__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>maps__DeviceId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Device Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__DeviceType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Device Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__DeviceVendor__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Device Vendor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__DisableGlobalSearch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disables searching for records inside Maps with this Base Object.</description>
        <label>Disable Global Search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__InActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__LastUpdated__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>maps__Latitude__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Latitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__Longitude__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Longitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__MapIt_Proximity_Measurement_Unit__c</fullName>
        <label>MapIt Proximity Measurement Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Meters</fullName>
                </value>
                <value>
                    <fullName>Kilometers</fullName>
                </value>
                <value>
                    <fullName>Miles</fullName>
                </value>
                <value>
                    <fullName>Feet</fullName>
                </value>
                <value>
                    <fullName>Yards</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__MapIt_Proximity_On__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MapIt Proximity On</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__MapIt_Proximity_Radius__c</fullName>
        <label>MapIt Proximity Radius</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__MapIt_Show_Inside_Shape__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MapIt Show Inside Shape</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__MapIt_Zoom_Control__c</fullName>
        <defaultValue>16</defaultValue>
        <label>MapIt Zoom Control</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__MapIt_Zoom_To_Fit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MapIt Zoom To Fit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__PolymorphicAddressObject__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Polymorphic Address Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__PostalCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__PriorityField__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Priority Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__PriorityType__c</fullName>
        <label>Priority Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Einstein</fullName>
                </value>
                <value>
                    <fullName>Pardot</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__Processing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__Quality__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Quality</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__RecordTypeId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Record Type Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__RoutingEndTime__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Routing End Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__RoutingHasAddress__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Routing Has Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__RoutingIsFlexible__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Routing Is Flexible</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__RoutingStartTime__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Routing Start Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__Settings__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Settings</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__Shape__c</fullName>
        <description>This field is used to store lookup field names to Maps territories which can be set up for Geofence Layers.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Shape</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__Similarity__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Similarity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__SkipFailedGeocodes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skip Failed Geocodes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__Street__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__Tooltip10__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tooltip Ten</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__Tooltip11__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tooltip Eleven</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__Tooltip12__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tooltip Twelve</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Marker</fullName>
                </value>
                <value>
                    <fullName>Live</fullName>
                </value>
                <value>
                    <fullName>Geofence</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__VerifiedLatitude__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Verified Latitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__VerifiedLongitude__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Verified Longitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__testLat__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>testLat</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Maps Base Object</label>
    <listViews>
        <fullName>maps__All</fullName>
        <columns>NAME</columns>
        <columns>maps__Name__c</columns>
        <columns>maps__Processing__c</columns>
        <columns>maps__AddressObject__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Base Object</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Base Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>